Fix Select alignment (#241)
The "REQUIRED" text and the dropdown arrow are both misaligned with
required text in other form components (e.g. the TextInput component).
I still don't fully understand the required alignment, but have
visually confirmed that they are now aligned (see github PR for
screenshots).

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -14,9 +14,10 @@
   top: @size_xs;
   width: 100%;
 
+  // aligns REQUIRED text with text in other forms
   .Select--required {
     position: absolute;
-    right: @size_l;
+    right: 0.8rem;
   }
 }
 
@@ -51,6 +52,11 @@
     .Select-arrow {
       display: none;
     }
+  }
+
+  // aligns the arrow with REQUIRED text (so both align with other forms)
+  .Select-arrow-zone {
+    padding-right: 0.6rem;
   }
 
   &.Select--multi {
